layout issues resolved

--- a/src/components/BiggerRightWithButtons/BiggerRightWithButtons.module.scss
+++ b/src/components/BiggerRightWithButtons/BiggerRightWithButtons.module.scss
@@ -1,5 +1,5 @@
 .Section {
-  height: 100vh;
+  height: 100%;
   @media (max-width: 768px) {
     height: 100%;
   }
